*smartgit-20.1.4
just a simple symlink
*smartgit-20.1.2
::prototype99	update url