@@ -1,7 +1,9 @@
 AUX smartgit.sh 3790 BLAKE2B c667640dfb8a29e03b6d01350787d2929698aacba7771e6a772fed1529cee62045602e3a15fbae46d54d0f59c37e41befaebf58ef6f3dcce2893b28e52d7a4fe SHA512 473bb2403d00d334200fdbc7e16bbde9c6f7083a3620352b4e3f24b28bb70dd47ce7e6acc561ba4055fd3c73ba564db325ee49e9e9db492f9c84007b1846381c
 DIST smartgit-20.1.2.tar.gz 48029159 BLAKE2B 41d045bf7819dc662d2a4d4213498702e3f6b22e2f379fc51af9d492e5e9403f1c0de5004c90ef9666412ac1ccb521a212030fdaea19a244513008ddea8c2913 SHA512 54f9f94db8449307a9696ab1a4fb8a0c5665c750728c9bd11b11cba041436ef81991ac0b8b2e77eedbbdb819879bf4a6ac55b83df99e866cf18edfb48b09e1b6
 DIST smartgit-20.1.4.tar.gz 48029624 BLAKE2B fdfe0d9aa98446d863480b5852c011793fa7e36093df6ff2bbd4cc2246a1ef86086faacfe437c3e500bbf875c6979197fc6b63add381745dcaaf86aa35cd1414 SHA512 3451d93b5c8b9a790c988315b2b90ddd9608f03b14a907c7784f2d886678f184c82d082e8169aead6340497a39ff0bade31ed9090b83f687132c8a31f6494c27
+DIST smartgit-20.2_rc1.tar.gz 104041114 BLAKE2B 8bcbe2daf51a3e4de6d042f1105db2ff283ec64af00f146045ccc8714940fffac5123557a1ff535b4793f864e76e378d4907e0198b15478d257887cf33788c2b SHA512 4b3cd94f38a287f6cd94ff5e4d2179ee9730465b2d972099b6ee6afa6b2d431ce7a460b6a4d6054a018a227478062bfa64970d87c9435134a44d566048fd0561
 EBUILD smartgit-20.1.2.ebuild 2719 BLAKE2B 06a161a974b138a317de2cc72a716fc9df9ede07e44b43cc79e99c4ba22a77f6e8096e2556651ab4b62f970414e2512a43d58d8105f52bb21f05a302565d02ab SHA512 7bd64da29a2b38c09245f59de8ccf2a9dee6e6e7ea3e5c39366dc92450f4de8e19c29f6052112cece24eca95f9681fd2c34c25530cb1029a7fb77d43f6793812
 EBUILD smartgit-20.1.4.ebuild 2719 BLAKE2B 06a161a974b138a317de2cc72a716fc9df9ede07e44b43cc79e99c4ba22a77f6e8096e2556651ab4b62f970414e2512a43d58d8105f52bb21f05a302565d02ab SHA512 7bd64da29a2b38c09245f59de8ccf2a9dee6e6e7ea3e5c39366dc92450f4de8e19c29f6052112cece24eca95f9681fd2c34c25530cb1029a7fb77d43f6793812
-MISC ChangeLog 80 BLAKE2B 2428e8092431a76f068ebda3e0ce08aaa4db3772e8d540091e722b44cda0948f4ab8b0e20567b612e0b9d8f72965ca6c7522632e565fbb482b8aab0e6a8a94fb SHA512 9cf8124acbafae485513e7c4fa530af3a783b2458d45305acbd7ff3a0814d48ca630796b07c98ef50408856c759a31d9b5642331eec273bf872da7fc86b5952a
+EBUILD smartgit-20.2_rc1.ebuild 2539 BLAKE2B 32f4726e409e97c7377bc0a5c757a9f2ee5154ffeefd2f2a43b1c758268035be1d0019ee192ce9a0fbd36b5e112c36428eed981904bd2f3b535b9ec891ff9afc SHA512 bc0451f38d8dc78173067d980b320d5e690b169d72ec2a5580771d5b85a637d47db2b3d1a4c4fd69e17a1348f192720fc2303a19795b86de0fa21805d863db84
+MISC ChangeLog 172 BLAKE2B 5d64812af2af768b81e99e6aae047463af03f34310a7d7019b77e5f88cf3947e14b6bebf27703f6fb032aa6abde1066db2c07d30b7fb58486ad161c0b7d27f55 SHA512 b7b3691acc68cbd664b3479fa780d5b98f1a5cc996dfda335f5583e601c4f442e9bff70fb8376ed363173ba085995e57b6a058756bc3121781adb6500537702b
 MISC metadata.xml 274 BLAKE2B 5fbffc6007cab8840d4fd6e79ce047c56e8c5d79006572d5e66c2d9bd178b137e07509a539ceb40213d43740834fb5d7d274e3aec7567da9e5e3873faa6cdebe SHA512 88e98caa1b4cb05620130e5252bfdf1f4ed6459ce55eab9f9af1fd09b0e7abff651b3e65c29892266859135c8f2f30e8aa7c9eaf20c9a43323be2e326a7fcf3d
