@@ -1,3 +1,5 @@
+*smartgit-20.2_rc1
+::prototype99	remove kinda useless comment, just hardcode the source url
 *smartgit-20.1.4
 just a simple symlink
 *smartgit-20.1.2
